--- a/design/recipe.html
+++ b/design/recipe.html
@@ -6,7 +6,7 @@
       
         <link rel="icon" type="image/png" sizes="32x32" href="\assets\images\favicon-32x32.png">
 
-        <link rel="stylesheet" href="recipe.css">
+        <link rel="stylesheet" href="../design/recipe.css">
         
         <title>Frontend Mentor | Recipe page</title>
         <style>
